[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/tutorial/Fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/tutorial/Themes/GodotDarkBlue.theme" type="Theme" id=2]
[ext_resource path="res://addons/tutorial/Scenes/InfoDialog.gd" type="Script" id=3]
[ext_resource path="res://addons/tutorial/Icons/Home Button.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="InfoDialog" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -128.5
margin_right = 203.0
margin_bottom = 128.5
rect_min_size = Vector2( 300, 200 )
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 27.0
margin_right = 398.0
margin_bottom = 168.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -82.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Footer"]
self_modulate = Color( 0.59, 0.59, 0.59, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page" type="Label" parent="Footer"]
margin_left = 6.25421
margin_right = 58.2542
margin_bottom = 27.0
text = "Page: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Footer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 6.25421
margin_top = -0.5
margin_right = -13.7458
margin_bottom = 26.5
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="Button" parent="Footer/HBoxContainer"]
margin_right = 167.0
margin_bottom = 27.0
hint_tooltip = "<< Previous Step"
mouse_filter = 1
size_flags_horizontal = 3
text = "<< Previous"

[node name="HomeButton" type="TextureButton" parent="Footer/HBoxContainer"]
self_modulate = Color( 100, 100, 100, 1 )
margin_left = 177.0
margin_right = 208.0
margin_bottom = 27.0
hint_tooltip = "Back to Main Window"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.18
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Next" type="Button" parent="Footer/HBoxContainer"]
margin_left = 218.0
margin_right = 386.0
margin_bottom = 27.0
hint_tooltip = "Next Step >>"
mouse_filter = 1
size_flags_horizontal = 3
text = "Next >>"

[connection signal="gui_input" from="." to="." method="_on_InfoDialog_gui_input"]
[connection signal="pressed" from="Footer/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Footer/HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Footer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
